changes button copy

--- a/index.html
+++ b/index.html
@@ -26,9 +26,8 @@
       using the form &nbsp;
       <span style="background-color: #e6e6e6; font-style: italic">
         <code>z,z,z</code> </span
-      >&nbsp; where <i> &nbsp;z &nbsp;</i> is an integer within each of the
-      input fields below. Be careful with &nbsp; <i> Detail</i>, 13 is
-      suggested, but anything above 15 takes a bit longer.
+      >&nbsp; where <i> &nbsp;z &nbsp;</i> is an integer. Be careful with &nbsp;
+      <i> Detail</i>, 13 is suggested, but anything above 15 takes a bit longer.
     </p>
     <form id="inputs">
       <div class="wrapper">
@@ -101,7 +100,7 @@
         </div>
       </div>
       <div id="button">
-        <button type="submit">Submit form</button>
+        <button type="submit">Show me the fractal!</button>
       </div>
     </form>
     <div>
