hardcoded matrix powers array for better performance

--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
         </div>
       </div>
       <script type="text/javascript" src="logic.js"></script>
+      <script type="text/javascript" src="matrixPowers.js"></script>
     </div>
   </body>
 </html>
